--- a/数组/删除排序数组中的重复项.ipynb
+++ b/数组/删除排序数组中的重复项.ipynb
@@ -60,7 +60,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def removeDuplicates(self,nums):\n",
+    "        if not nums or len(nums) == 0:\n",
+    "            return 0\n",
+    "        p = 0\n",
+    "        q = 1\n",
+    "        while q < len(nums):\n",
+    "            if nums[p] != nums[q]:\n",
+    "                nums[p + 1] = nums[q]\n",
+    "                p += 1\n",
+    "            q += 1\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
